--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "typescript": "^5.6.3",
     "@types/node": "^22.10.2",
+	"@types/react-signature-canvas": "^1.0.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "tailwindcss": "^3.4.17",
